# FZXLog

./: CMakeLists.txt  LICENSE  README.md  main.cpp
FZXLog/: CMakeLists.txt  Common.h  FZXLog.h  Log.h  Utils.h
FZXLog/FMT/: BaseFormatter.h  DefaultFormatter.cpp  DefaultFormatter.h  FMT.h
FZXLog/Fmt/: BaseFormatter.h  Fmt.h  Formatter.h  PatternFormatter.cpp  PatternFormatter.h
FZXLog/Logger/: AsyncLogger.h  Logger.cpp  Logger.h  SyncLogger.cpp  SyncLogger.h
FZXLog/Sink/: BaseSink.h  ConsoleSink.cpp  ConsoleSink.h  RotationFileSink.cpp  RotationFileSink.h  Sink.h
